# 3d_sensing_course_elte

./: .gitignore  README.md
homework/exam_prep/: exam_report.md
homework/hw2/data_fusion/: CMakeLists.txt
homework/hw2/data_fusion/auto_eval_report/: generate_report.py  run_evaluation.py
homework/hw2/data_fusion/data/: README.MD
homework/hw2/data_fusion/data/s10_lampshade1/eval/: eval_results.txt
homework/hw2/data_fusion/data/s11_lampshade2/eval/: eval_results.txt
homework/hw2/data_fusion/data/s12_plastic/eval/: eval_results.txt
homework/hw2/data_fusion/data/s1_aloe/eval/: eval_results.txt
homework/hw2/data_fusion/data/s2_baby1/eval/: eval_results.txt
homework/hw2/data_fusion/data/s3_baby2/eval/: eval_results.txt
homework/hw2/data_fusion/data/s4_bowling1/eval/: eval_results.txt
homework/hw2/data_fusion/data/s5_bowling2/eval/: eval_results.txt
homework/hw2/data_fusion/data/s6_cloth2/eval/: eval_results.txt
homework/hw2/data_fusion/data/s7_cloth3/eval/: eval_results.txt
homework/hw2/data_fusion/data/s8_cloth4/eval/: eval_results.txt
homework/hw2/data_fusion/report/: Homework_2_Report.md
homework/hw2/data_fusion/src/: fusion.hpp  main.cpp
homework/hw2/upsample2pointCloud/: CMakeLists.txt
homework/hw2/upsample2pointCloud/src/: main.cpp
homework/hw3/: CMakeLists.txt  task.md
homework/hw3/data/: armadilloback_60.xyz  armadilloback_90.xyz  dragonstandright_120.xyz  dragonstandright_96.xyz  drill_1.6mm_30_cyb.xyz  drill_1.6mm_60_cyb.xyz
homework/hw3/report/: results.MD
homework/hw3/results/: armadillo gaus 0.3.xyz  dragonBack gaus 0.3.xyz  drill gaus 0.3.xyz
homework/hw3/src/: main.cpp  utils.hpp
practice/05_Eigen_test_rotation/: CMakeLists.txt  SO3.hpp  main_rotation.cpp
(+36 files in other folders)
